# VulkanRaytracing

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
lib/: common.lib  shaderc.lib
lib/windows/: OpenImageDenoise.lib
res/shaders/: quad.vert  raytrace.comp  raytrace.comp.spv  text.frag  text.frag.spv  text.vert  text.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert.spv
src/: camera.cpp  camera.h  font.cpp  font.h  main.cpp  util.h  util.hpp  vkutil.cpp  vkutil.h
